<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luisb.formulariointents.MainActivity"
    android:layout_margin="@dimen/margin"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/floating_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_text"
        android:layout_marginBottom="@dimen/margin_text">

        <EditText
            android:id="@+id/EditNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            />

    </android.support.design.widget.TextInputLayout>

    <!--Espacio para edit Text e icono boton-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/floating_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_text"
            android:layout_marginBottom="@dimen/margin_text">

            <EditText
                android:id="@+id/editNace"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:hint="@string/nace"
                android:inputType="date"
                android:layout_gravity="center_vertical" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/imgCalendar"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/calendar"
            android:onClick="datePicker"
            android:contentDescription="@string/icon" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/floating_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_text"
        android:layout_marginBottom="@dimen/margin_text">

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            android:layout_gravity="center_vertical" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/floating_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_text"
        android:layout_marginBottom="@dimen/margin_text">

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_gravity="center_vertical" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/floating_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_text"
            android:layout_marginBottom="@dimen/margin_text">

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descript"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/button_text" />

    </LinearLayout>

</LinearLayout>
